--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
-
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
@@ -13,6 +12,7 @@
     "prettier.jsxSingleQuote": false,
     "prettier.trailingComma": "es5",
     "prettier.arrowParens": "always",
+    "editor.wordWrap": "on",
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
